--- a/Project.toml
+++ b/Project.toml
@@ -3,9 +3,8 @@ uuid = "d5dc2f44-7ae2-49e9-bc77-b47b6bca565d"
 version = "0.1.0-DEV"
 
 [deps]
-PATHSolver = "f5f7c340-0bb3-5c69-969a-41884d311d1b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
-Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+Complementarity = "a9b2a840-c9d5-5181-a245-8df664c2d6e7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
