--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,8 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 julia = "1.5"
+JuMP = "0.21"
+Complementarity = "0.8"
 
 [targets]
 test = ["Test"]
