--- a/.github/workflows/jlpkgbutler-ci-master-workflow.yml
+++ b/.github/workflows/jlpkgbutler-ci-master-workflow.yml
@@ -16,6 +16,7 @@ jobs:
         exclude:
           - os: macOS-latest
             julia-arch: x86
+          - julia-arch: x86
 
     steps:
       - uses: actions/checkout@v2
