--- a/.github/workflows/jlpkgbutler-ci-pr-workflow.yml
+++ b/.github/workflows/jlpkgbutler-ci-pr-workflow.yml
@@ -15,6 +15,7 @@ jobs:
         exclude:
           - os: macOS-latest
             julia-arch: x86
+          - julia-arch: x86
 
     steps:
       - uses: actions/checkout@v2
