--- a/Project.toml
+++ b/Project.toml
@@ -1,18 +1,18 @@
 name = "MPSGE"
 uuid = "d5dc2f44-7ae2-49e9-bc77-b47b6bca565d"
-version = "0.1.0-DEV"
+version = "0.1.0"
 
 [deps]
-JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Complementarity = "a9b2a840-c9d5-5181-a245-8df664c2d6e7"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 julia = "1.5"
-JuMP = "0.21"
 Complementarity = "0.8"
+JuMP = "0.21"
 
 [targets]
 test = ["Test"]
