--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0-DEV"
 [deps]
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Complementarity = "a9b2a840-c9d5-5181-a245-8df664c2d6e7"
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
@@ -13,6 +14,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 julia = "1.5"
 JuMP = "0.21"
 Complementarity = "0.8"
+MacroTools = "0.5"
 
 [targets]
 test = ["Test"]
