--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "MPSGE"
 uuid = "d5dc2f44-7ae2-49e9-bc77-b47b6bca565d"
-version = "0.2.1-DEV"
+version = "0.3.0"
 
 [deps]
 Complementarity = "a9b2a840-c9d5-5181-a245-8df664c2d6e7"
@@ -8,9 +8,9 @@ JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
+TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 julia = "1.6"
