--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "MPSGE"
 uuid = "d5dc2f44-7ae2-49e9-bc77-b47b6bca565d"
-version = "0.3.0"
+version = "0.3.1-DEV"
 
 [deps]
 Complementarity = "a9b2a840-c9d5-5181-a245-8df664c2d6e7"
