--- a/Project.toml
+++ b/Project.toml
@@ -3,9 +3,9 @@ uuid = "d5dc2f44-7ae2-49e9-bc77-b47b6bca565d"
 version = "0.3.1-DEV"
 
 [deps]
-Complementarity = "a9b2a840-c9d5-5181-a245-8df664c2d6e7"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
+PATHSolver = "f5f7c340-0bb3-5c69-969a-41884d311d1b"
 
 [extras]
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
@@ -14,9 +14,9 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 julia = "1.6"
-Complementarity = "0.9"
 JuMP = "1.2"
 MacroTools = "0.5"
+PATHSolver = "1.6"
 
 [targets]
 test = ["Test", "TestItemRunner", "XLSX"]
