--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ Complementarity = "0.9"
 JuMP = "1.2"
 MacroTools = "0.5"
 julia = "1.6"
+PrettyTables = "2.2.7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
