--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,7 @@ PATHSolver = "f5f7c340-0bb3-5c69-969a-41884d311d1b"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 
 [compat]
-JuMP = "1.15.1"
+JuMP = "1.15.1 - 1.17.0"
 MacroTools = "0.5"
 PATHSolver = "1.6"
 PrettyTables = "2.2.7"
