--- a/Project.toml
+++ b/Project.toml
@@ -16,10 +16,11 @@ PrettyTables = "2.2.7"
 julia = "1.6"
 
 [extras]
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
-JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 
 [targets]
-test = ["Test", "TestItemRunner", "XLSX", "JLD2"]
+test = ["Test", "TestItemRunner", "XLSX", "JLD2", "FileIO"]
