--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ MacroTools = "0.5"
 PATHSolver = "1.6"
 PrettyTables = "2.2.7"
 julia = "1.6"
+JLD2 = "0.4.43 - 0.4.44"
 
 [extras]
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
