--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "e4d7e5e9-05a6-42ea-b397-b92e5812bd75"
 authors = ["Mitch Phillipson"]
 version = "1.0.0-DEV"
 
+[deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+PATHSolver = "f5f7c340-0bb3-5c69-969a-41884d311d1b"
+
 [compat]
 julia = "1"
 
