--- a/Project.toml
+++ b/Project.toml
@@ -9,10 +9,13 @@ JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 PATHSolver = "f5f7c340-0bb3-5c69-969a-41884d311d1b"
 
 [compat]
-julia = "1"
+julia = "1.6"
+JuMP = "1.15.1"
+PATHSolver = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [targets]
-test = ["Test"]
+test = ["Test","XLSX"]
