--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,8 +22,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        julia-version: ['1.6', '1.7', '1.8', '1.9']
-        os: [ubuntu-latest, windows-latest]
+        version:
+          - '1.6'
+          - '1.9'
+        os:
+          - ubuntu-latest
+          - windows-latest
         arch:
           - x64
           - x86
