--- a/Project.toml
+++ b/Project.toml
@@ -1,26 +1,26 @@
 name = "MPSGE"
 uuid = "d5dc2f44-7ae2-49e9-bc77-b47b6bca565d"
-version = "0.3.1-DEV"
+version = "0.4.0-DEV"
 
 [deps]
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 PATHSolver = "f5f7c340-0bb3-5c69-969a-41884d311d1b"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 
 [extras]
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
-
 
 [compat]
 julia = "1.6"
 JuMP = "1.15.1"
 MacroTools = "0.5"
-PATHSolver = "1.6"
+PATHSolver = "1.7.3"
 PrettyTables = "2.2.7"
 
 [targets]
-test = ["Test", "TestItemRunner", "XLSX", "CSV"]
+test = ["Test", "TestItemRunner", "XLSX"]
