Increase version to 0.4.1-DEV

--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "MPSGE"
 uuid = "d5dc2f44-7ae2-49e9-bc77-b47b6bca565d"
-version = "0.4.0"
+version = "0.4.1-DEV"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
