--- a/Project.toml
+++ b/Project.toml
@@ -6,13 +6,15 @@ version = "1.0.0-DEV"
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 PATHSolver = "f5f7c340-0bb3-5c69-969a-41884d311d1b"
 
 [compat]
+DataFrames = "1.6.1"
 JuMP = "1.20.0"
 PATHSolver = "1.7.4"
 julia = "1.6"
-DataFrames = "1.6.1"
+OrderedCollections = "1.6.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
