--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,3 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-MPSGE_MP = "e4d7e5e9-05a6-42ea-b397-b92e5812bd75"
+MPSGE = "d5dc2f44-7ae2-49e9-bc77-b47b6bca565d"
