--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -3,4 +3,5 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 MPSGE = "d5dc2f44-7ae2-49e9-bc77-b47b6bca565d"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PlotlyDocumenter = "9b90f1cd-2639-4507-8b17-2fbe371ceceb"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
