--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "MPSGE"
 uuid = "d5dc2f44-7ae2-49e9-bc77-b47b6bca565d"
-authors = ["Mitch Phillipson"]
+authors = ["Mitch Phillipson, Eli Lazarus, David Anthoff"]
 version = "0.5.2"
 
 [deps]
