--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,7 +23,9 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.9'
+          - '1.10'
+          - '1.11'
+          - 'nightly'
         os:
           - ubuntu-latest
           - windows-latest
